@startuml

title __GUI's Class Diagram__\n

  namespace  {
    namespace om.GUI {
      class com.GUI.ConnectToServerForm {
          + hostName : String
          + portNumber : String
          - contentPane : JPanel
          - serverIcon : Image
          - txtHostName : JTextField
          - txtPortNumber : JTextField
          + ConnectToServerForm()
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace om.GUI {
      class com.GUI.HomeScreen {
          + frame : JFrame
          + lblNewLabel : JLabel
          + progressBar : JProgressBar
          + HomeScreen()
          + initialize()
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace om.GUI {
      class com.GUI.LoginForm {
          - contentPane : JPanel
          - passwordField : JPasswordField
          - textField : JTextField
          + LoginForm()
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace om.GUI {
      class com.GUI.RegistrationForm {
          - contentPane : JPanel
          - passwordField : JPasswordField
          - passwordField_1 : JPasswordField
          - textField : JTextField
          + RegistrationForm()
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace om.GUI {
      class com.GUI.RequestAndResponse {
          {static} - ClientReceivedResponseArea : JTextArea
          {static} - ClientRequestArea : JTextArea
          {static} - ServerReceivedArea : JTextArea
          {static} - ServerResponseArea : JTextArea
          - contentPane : JPanel
          + RequestAndResponse()
          {static} + main()
          {static} + receiveRequestAndResponse()
      }
    }
  }
  

  namespace  {
    namespace om.GUI {
      class com.GUI.TwitterUploadPage {
          + userName : String
          - contentPane : JPanel
          - downloadBtn : JButton
          - lblSessionId : JLabel
          - lblUser : JLabel
          - textField : JTextField
          + TwitterUploadPage()
          + displayUserDetails()
          {static} + main()
          - appendToPane()
      }
    }
  }
  

  com.GUI.ConnectToServerForm -up-|> javax.swing.JFrame
  com.GUI.LoginForm -up-|> javax.swing.JFrame
  com.GUI.RegistrationForm -up-|> javax.swing.JFrame
  com.GUI.RequestAndResponse -up-|> javax.swing.JFrame
  com.GUI.TwitterUploadPage -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
